--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>One pair of socks a month/h1>
+          <h1>One pair of socks a month</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
