--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
       .footer a {
         color: #ccccff;
       }
+
+div.addthis_toolbox {
+width:180px;
+margin: 0 auto;
+}
     </style>
   </head>
   <body>
@@ -176,10 +181,18 @@
             <button class="btn btn-success btn-large">Preorder your first box</button>
           </div>
           <div class="span8 offset2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+
+	    <!-- AddThis Button BEGIN -->
+	    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+	      <a class="addthis_button_preferred_1"></a>
+	      <a class="addthis_button_preferred_2"></a>
+	      <a class="addthis_button_compact"></a>
+	      <a class="addthis_counter addthis_bubble_style"></a>
+	    </div>
+	    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+	    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5202511056e161e5"></script>
+	    <!-- AddThis Button END -->
+
           </div>
         </div>
       </div>
@@ -191,7 +204,7 @@
         <div class="span5 copy">
           <p>
             Tired of having only solo socks in your drawer? Where do those lost socks go?
-	    That's a problem we'll solve in another mission.
+	    That's a problem we'll solve in another mission.<br>
 	    For today, we have a solution for you: subscribe to A pair of socks a month.
           </p>
         </div>
